# ft_package

./: LICENSE.txt  README.md  pyproject.toml  setup.cfg  setup.py  test.py
ft_package/: __init__.py  count_in_list.py  greetings.py
ft_package/ft_package.egg-info/: PKG-INFO  SOURCES.txt
